// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultCard(BAD_SYNTAX) matches snapshot. 1`] = `
<div
  className="MuiPaper-root MuiCard-root ParallelCard MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
      >
        Interpretation Result
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root"
  >
    <div
      className="ColoredResult"
      style={
        Object {
          "borderLeftColor": "red",
        }
      }
    >
      <code>
        <p>
          foo
        </p>
      </code>
    </div>
  </div>
</div>
`;

exports[`ResultCard(BAD_TYPE) matches snapshot. 1`] = `
<div
  className="MuiPaper-root MuiCard-root ParallelCard MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
      >
        Interpretation Result
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root"
  >
    <div
      className="ColoredResult"
      style={
        Object {
          "borderLeftColor": "red",
        }
      }
    >
      <code>
        <p>
          bar
        </p>
      </code>
    </div>
  </div>
</div>
`;

exports[`ResultCard(GOOD_PROGRAM) matches snapshot. 1`] = `
<div
  className="MuiPaper-root MuiCard-root ParallelCard MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
      >
        Interpretation Result
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root"
  >
    <div>
      <div
        className="ColoredResult"
        style={
          Object {
            "borderLeftColor": "orange",
          }
        }
      >
        <h3>
          Program Running Result
        </h3>
        <pre>
          haha
        </pre>
      </div>
      <div>
        <div
          className="ColoredResult"
          style={
            Object {
              "borderLeftColor": "green",
            }
          }
        >
          <h3>
            Pretty Printed Program:
          </h3>
          <pre
            className="prism-code language-samlang CodeBlock"
            style={
              Object {
                "backgroundColor": "#f7f7f7",
              }
            }
          >
            <div
              className="token-line"
              style={
                Object {
                  "backgroundColor": null,
                }
              }
            >
              <span
                className="token keyword"
                style={
                  Object {
                    "color": "rgb(62, 122, 226)",
                  }
                }
              >
                class
              </span>
              <span
                className="token plain"
              >
                 
              </span>
              <span
                className="token class-name"
                style={
                  Object {
                    "color": "rgb(154, 48, 173)",
                  }
                }
              >
                HelloWorld
              </span>
              <span
                className="token plain"
              >
                 {}
              </span>
            </div>
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResultCard(null) matches snapshot. 1`] = `
<div
  className="MuiPaper-root MuiCard-root ParallelCard MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
      >
        Interpretation Result
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root"
  >
    Submit a program to see the interpretation result.
  </div>
</div>
`;

exports[`ResultCard(server-error) matches snapshot. 1`] = `
<div
  className="MuiPaper-root MuiCard-root ParallelCard MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
      >
        Interpretation Result
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root"
  >
    Server Error. Please try again.
  </div>
</div>
`;

exports[`ResultCard(waiting) matches snapshot. 1`] = `
<div
  className="MuiPaper-root MuiCard-root ParallelCard MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
      >
        Interpretation Result
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root"
  >
    Waiting for server response...
  </div>
</div>
`;
